kubernetes-configs/echoserver.yaml
#
#  Author: KhulnaSoft Ltd
#  Date: 2023-04-07 22:43:51 +0100 (Fri, 07 Apr 2023)
#
#  vim:ts=2:sts=2:sw=2:et
#  lint: k8s
#
#  https://github.com/KhulnaSoft/DevX/tree/main/bash-tools/kubernetes
#
#  License: see accompanying KhulnaSoft Ltd LICENSE file
#
#  If you're using my code you're welcome to connect with me on LinkedIn and optionally send me feedback to help steer this or other code I publish
#
#  https://www.linkedin.com/company/khulnasoft
#

# For testing Ingress Controllers such as Kong or HAProxy

# Based on:
#
#   https://raw.githubusercontent.com/SIMPLrU/interactive/master/konglabs/kong-ingress-controller/manifests/echo-service.yml
#
# Apply also:
#
#   kong-ingress-echoserver.yaml
#   ingress-nginx-echoserver.yaml
#   haproxy-ingress-echoserver.yaml

---
apiVersion: v1
kind: Namespace
metadata:
  name: echo
  labels:
    goldilocks.fairwinds.com/enabled: "true"
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: echo
  name: echo
  namespace: echo
spec:
  ports:
    - port: 8080
      name: high
      protocol: TCP
      targetPort: 8080
    - port: 80
      name: low
      protocol: TCP
      targetPort: 8080
  selector:
    app: echo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: echo
  name: echo
  namespace: echo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: echo
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: echo
    spec:
      containers:
        - image: gcr.io/kubernetes-e2e-test-images/echoserver:2.2
          name: echo
          ports:
            - containerPort: 8080
          resources: {}
