kubernetes-configs/endpoint.yaml
#
#  Author: KhulnaSoft Ltd
#  Date: [% DATE  # 2019-11-25 13:47:16 +0000 (Mon, 25 Nov 2019) %]
#
#  vim:ts=2:sts=2:sw=2:et
#  lint: k8s
#
#  https://github.com/KhulnaSoft/DevX/tree/main/bash-tools/kubernetes
#
#  License: see accompanying KhulnaSoft Ltd LICENSE file
#
#  If you're using my code you're welcome to connect with me on LinkedIn
#  and optionally send me feedback to help improve or steer this or other code I publish
#
#  https://www.linkedin.com/company/khulnasoft
#

# ============================================================================ #
#                                E n d p o i n t
# ============================================================================ #

# https://kubernetes.io/docs/concepts/services-networking/service/

# https://kubernetes.io/docs/reference/kubernetes-api/service-resources/endpoints-v1/

# You'll rarely do this yourself, usually let the service manage the endpoint for you

# combine with service-manual-endpoints.yaml

---
apiVersion: v1
kind: Endpoints
metadata:
  name: NAME
  namespace: NAMESPACE
  labels:
    app: APP
subsets:
  # round robins to each of the addresses
  - addresses:
      - ip: IP
    ports:
      - port: 80
  - addresses:
      - ip: IP2
    ports:
      - port: 80
